workshop-cft.yaml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Parameters:
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: '0.0.0.0/0'
    AllowedPattern: (^\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}/\d{1,2}$)|(^sg-.+$)
    ConstraintDescription: Must be a valid IP CIDR range or a security group ID (e.g. 0.0.0.0/0 or sg-1234abcd)
  AMIID:
    Description: The AMI ID of the EC2 instance
    Type: String
    Default: 'ami-0fc61db8544a617ed'
Globals:
  Function:
    Runtime: python3.8
    Handler: handler.lambda_handler
    MemorySize: 128
    Timeout: 180
Resources:
# ------------------------------------------
# Lambda + API GW
# ------------------------------------------

  RestApiFunction:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri:
        Bucket: solvo-demo-app
        Key: app.zip
      Environment:
        Variables:
          TABLE_NAME:
            Ref: SensativeTable
          BUCKET_NAME:
            Ref: SensativeBucket
      Events:
        AppApi:
          Type: Api
          Properties:
            Path: /api/process
            Method: post
        CWSchedule:
          Type: Schedule
          Properties:
            Schedule: 'rate(1 hour)'
            Description: test schedule
            Enabled: true
      Policies:
        - Statement:
          - Sid: S3Read
            Effect: Allow
            Action:
              - s3:Get*
            Resource: '*'
          - Sid: S3Put
            Effect: Allow
            Action:
              - s3:Put*
            Resource: '*'
        - "arn:aws:iam::aws:policy/AmazonDynamoDBFullAccess"
  SensativeTable:
    Type: AWS::Serverless::SimpleTable
  SensativeBucket:
    Type: AWS::S3::Bucket
    Properties:
      AccessControl: PublicRead

# ------------------------------------------
# EC2 + LB
# ------------------------------------------

  MySecret:
    Type: 'AWS::SecretsManager::Secret'
    Properties:
      Name: api-key-secret
      Description: 'This is my secret'
      SecretString: '{"username": "myusername", "password": "mypassword"}'
  MyInstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: /
      Roles:
        - !Ref MyInstanceRole
  MyInstanceRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: 'sts:AssumeRole'
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
        - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
        - arn:aws:iam::aws:policy/AmazonDynamoDBReadOnlyAccess
        - arn:aws:iam::aws:policy/SecretsManagerReadWrite
      Path: /
  MyEC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: !Ref AMIID
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref AppServerSecurityGroup
      SubnetId: !Ref PublicSubnetA
      IamInstanceProfile: !Ref MyInstanceProfile
      Tags:
        - Key: Name
          Value: appserver
        - Key: Type
          Value: demo
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y docker
          service docker start
          docker pull bkimminich/juice-shop
          docker run -d -p 80:3000 bkimminich/juice-shop
          export APP_SECRET_NAME=${MySecret}
          export APP_BUCKET_NAME=${SensativeBucket}
          export APP_TABLE_NAME=${SensativeTable}
          wget -O - https://raw.githubusercontent.com/solvocloud/solvo-workshop/dev/app.sh | bash
  MyLoadBalancer:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Name: MyLoadBalancer
      Scheme: internet-facing
      Subnets:
        - !Ref PublicSubnetA
        - !Ref PublicSubnetB
      SecurityGroups:
        - !Ref LbSecurityGroup
  MyTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      Name: MyTargetGroup
      Port: 80
      Protocol: HTTP
      VpcId: !Ref MyVPC
      Targets:
        - Id: !Ref MyEC2Instance
          Port: 80
  MyListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      LoadBalancerArn: !Ref MyLoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref MyTargetGroup
  MyVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: '10.0.0.0/16'
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
  VPCGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway
  PublicSubnetA:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '10.0.1.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: 'true'
  PublicSubnetB:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '10.0.2.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: 'true'
  LbSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: LbSecurityGroup
      GroupDescription: Allow http and SSH to client host
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHLocation
      Tags:
        - Key: Name
          Value: LbSecurityGroup
  AppServerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: AppServerSecurityGroup
      GroupDescription: Allow http and SSH to client host
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref LbSecurityGroup
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHLocation
      Tags:
        - Key: Name
          Value: AppServerSecurityGroup
  MyPublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref MyVPC
  PublicSubnetARouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref MyPublicRouteTable
  PublicSubnetBRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnetB
      RouteTableId: !Ref MyPublicRouteTable
  InternetRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: VPCGatewayAttachment
    Properties:
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref MyPublicRouteTable

  # --------------------------
  # Users
  # --------------------------
  MyIAMUser1:
      Type: 'AWS::IAM::User'
      Properties:
        UserName: jon.snow
        Path: /
        Tags:
          - Key: Name
            Value: jon.snow
        ManagedPolicyArns:
          - arn:aws:iam::aws:policy/AWSLambda_FullAccess

  MyIAMUser2:
      Type: 'AWS::IAM::User'
      Properties:
        UserName: tyrion.lannister
        Path: /
        Tags:
          - Key: Name
            Value: tyrion.lannister
        Policies:
        - PolicyName: allow-assume-role
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - sts:AssumeRole
                Resource:
                  - '*'


Outputs:
  MyLoadBalancerDNSName:
    Value: !Join ['', ['http://', !GetAtt MyLoadBalancer.DNSName]]
  WebsiteURL:
    Description: Website URL
    Value:
      Fn::Sub: https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/${ServerlessRestApi.Stage}/
